Opened 16 years ago
Closed 16 years ago
#2638 closed bug (fixed)
input_server's screen_saver filter crash in ScreenSaverFilter::Filter()
Reported by: | axeld | Owned by: | korli |
---|---|---|---|
Priority: | high | Milestone: | R1 |
Component: | Add-Ons/Input Filters | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
I turned off the screen saver, and closed the ScreenSaver preferences app, then the input_server crashed obviously while trying to update a BMessageRunner.
Image attached, happened with or around hrev27015.
Attachments (1)
Change History (5)
by , 16 years ago
Attachment: | screensaver.png added |
---|
comment:1 by , 16 years ago
Hopefully hrev27049 should help to avoid the crash. Maybe better locking is needed though.
comment:2 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Closing. Please reopen if needed.
comment:3 by , 16 years ago
Milestone: | R1/alpha1 → R1 |
---|---|
Resolution: | fixed |
Status: | closed → reopened |
I would like to keep this open, at least the code doesn't look good at all yet, ie. I would tend to say your above assumption is correct :-) I'll look into it in the next few days.
Note:
See TracTickets
for help on using tickets.
gdb back trace