* The ScreenSaverFilter now uses locking in all public functions to ensure   it works well with its controlling looper. This fixes #2638. * Header cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27885 a95241bf-73f2-0310-859d-f6bbb57e9c96